--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "type"
   ],
   "dependencies": {
+    "babel-add-flow-comments": "^0.2.0",
     "babel-explode-module": "^1.4.0",
     "babel-file-loader": "^1.0.2",
     "babel-flow-scope": "^1.2.0",
@@ -45,7 +46,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.5.2",
     "eslint": "^4.0.0",
-    "eslint-config-precure": "^0.5.1",
+    "eslint-config-precure": "^0.6.0",
     "flow-bin": "^0.48.0",
     "jest": "^20.0.4",
     "prettier": "^1.4.4"
