--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-precure": "^0.6.0",
     "flow-bin": "^0.48.0",
     "jest": "^20.0.4",
+    "jest-cli": "^20.0.4",
     "prettier": "^1.4.4"
   }
 }
