--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "build": "babel src -d lib",
+    "prepublishOnly": "npm run build",
     "test:watch": "jest --watch",
     "test": "jest"
   },
